examples/2_nic_cm/network.tf
# Create a Virtual Network within the Resource Group
resource "azurerm_virtual_network" "main" {
  name                = "${var.prefix}network-${random_pet.buildSuffix.id}"
  address_space       = ["${var.cidr}"]
  resource_group_name = azurerm_resource_group.main.name
  location            = azurerm_resource_group.main.location
}

# Create the Management Subnet within the Virtual Network
resource "azurerm_subnet" "mgmt" {
  name                 = "${var.prefix}mgmt-${random_pet.buildSuffix.id}"
  virtual_network_name = azurerm_virtual_network.main.name
  resource_group_name  = azurerm_resource_group.main.name
  address_prefix       = var.subnets["subnet1"]
}

# Create the discovery Subnet within the Virtual Network
resource "azurerm_subnet" "discovery" {
  name                 = "${var.prefix}discovery-${random_pet.buildSuffix.id}"
  virtual_network_name = azurerm_virtual_network.main.name
  resource_group_name  = azurerm_resource_group.main.name
  address_prefix       = var.subnets["subnet2"]
}
